# autostuff

./: .cproject  .gitignore  .project  Makefile.am  auto_curl.h  auto_flags.h  auto_mysql.h  auto_xml.h  auto_xml_test.cpp  bootstrap  configure.ac  main.cpp  odbcdatasources.h  person.proto  wozconfig.proto  wozstatus.proto
